acloudguru/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cleanup-daemonset
spec:
  selector:
    matchLabels:
      name: cleanup-pod
  template:
    metadata:
      labels:
        name: cleanup-pod
    spec:
      containers:
      - name: busybox
        image: busybox:1.27
        command: ['sh', '-c', 'while true; do rm -rf /beebox-temp/*; sleep 60; done']
        volumeMounts:
        - name: beebox-tmp
          mountPath: /beebox-temp
      volumes:
      - name: beebox-tmp
        hostPath:
          path: /etc/beebox/tmp
