acloudguru/multi-container-pod.yml
apiVersion: v1
MinReadySeconds:        0
RollingUpdateStrategy:  25% max unavailable, 25% max surge
apiVersion: v1
kind: Pod
metadata:
  name: shared-volume-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh','-c', 'while true; do echo data > /output/text.txt; sleep 5; done']]
    volumeMounts:
    - name: pod-storage
      mountPath: /output
  - name: busybox2
    image: busybox
    command: ['sh','-c', 'while true; do cat /input/text.txt; sleep 5; done']]
    volumeMounts:
    - name: pod-storage
      mountPath: /input
  volumes:
  - name: pod-storage
    emptyDir: {}
