acloudguru/pod-busy.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-12-10T11:37:25Z"
  labels:
    run: busybox
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:run: {}
      f:spec:
        f:containers:
          k:{"name":"busybox"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl-run
    operation: Update
    time: "2020-12-10T11:37:25Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"10.1.0.101"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2020-12-10T11:38:03Z"
  name: busybox
  namespace: default
  resourceVersion: "2313087"
  selfLink: /api/v1/namespaces/default/pods/busybox
  uid: 33ec88c1-2cc9-44bd-8a28-9ca7be51d2c2
spec:
  containers:
  - image: busybox
    imagePullPolicy: Always
    name: busybox
    command: 
    - sleep
    - "3600"
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-4lx8p
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-4lx8p
    secret:
      defaultMode: 420
      secretName: default-token-4lx8p
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-12-10T11:37:25Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-12-10T11:37:25Z"
    message: 'containers with unready status: [busybox]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-12-10T11:37:25Z"
    message: 'containers with unready status: [busybox]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-12-10T11:37:25Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://9e685757df4322fb6cb960d5ee396fa870ba666346d04f2577170042f5a00eca
    image: busybox:latest
    imageID: docker-pullable://busybox@sha256:bde48e1751173b709090c2539fdf12d6ba64e88ec7a4301591227ce925f3c678
    lastState:
      terminated:
        containerID: docker://9e685757df4322fb6cb960d5ee396fa870ba666346d04f2577170042f5a00eca
        exitCode: 0
        finishedAt: "2020-12-10T11:37:47Z"
        reason: Completed
        startedAt: "2020-12-10T11:37:47Z"
    name: busybox
    ready: false
    restartCount: 2
    started: false
    state:
      waiting:
        message: back-off 20s restarting failed container=busybox pod=busybox_default(33ec88c1-2cc9-44bd-8a28-9ca7be51d2c2)
        reason: CrashLoopBackOff
  hostIP: 192.168.65.3
  phase: Running
  podIP: 10.1.0.101
  podIPs:
  - ip: 10.1.0.101
  qosClass: BestEffort
  startTime: "2020-12-10T11:37:25Z"
