acloudguru/pod-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/output"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: pvc
