acloudguru/pod-redis.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis
  name: redispod
spec:
  containers:
  - image: redis
    name: redis
    volumeMounts:
    -  mountPath: /data
       name: redis-volume
    ports:
    - containerPort: 6379 
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: redis-volume
    persistentVolumeClaim:
      claimName: redisdb-pvc
status: {}
