acloudguru/pod-restart-policy.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-restart
  labels:
    name: pod-restart
spec:
  restartPolicy: OnFailure
  containers:
  - name: pod-restart
    image: linuxacademycontent/random-crashing-web-server:1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 5
