acloudguru/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-service
spec:
  type: NodePort
  selector:
    app: web-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
