acloudguru/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  type: ClusterIP
  selector:
    app: user-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
