acloudguru/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: web
spec:
  podSelector:
    matchLabels:
      app: webfront-deploy
  policyTypes:
  - Ingress
  - Egress
